packages/docs/services/inversify-site/versioned_docs/version-6.x/fundamentals/binding.mdx
---
sidebar_position: 1
title: Binding
---
import bindingScopeRequestSource from '@inversifyjs/code-examples/generated/examples/bindingScopeRequest.ts.txt';
import bindingScopeSingletonSource from '@inversifyjs/code-examples/generated/examples/bindingScopeSingleton.ts.txt';
import bindingScopeTransientSource from '@inversifyjs/code-examples/generated/examples/bindingScopeTransient.ts.txt';
import fundamentalsBindingExampleSource from '@inversifyjs/code-examples/generated/examples/v6/fundamentalsBindingExample.ts.txt';
import fundamentalsBindingFromClassMetadataSource from '@inversifyjs/code-examples/generated/examples/v6/fundamentalsBindingFromClassMetadata.ts.txt';
import fundamentalsAutobindingSource from '@inversifyjs/code-examples/generated/examples/v6/fundamentalsAutobinding.ts.txt';
import CodeBlock from '@theme/CodeBlock';

# Binding

A binding represents the relationship between a service identifier and its resolution. Bindings are added to a container to configure it to provide services.

<CodeBlock language="ts">{fundamentalsBindingExampleSource}</CodeBlock>

When the binding is added to the container, the container is configured to provide a resolved value for the service identifier `Weapon` by resolving the `Katana` class. `container.bind` creates a new binding with certain properties, which are explained below.

## Relying on emitted class metadata

When using TypeScript, you can rely on the emitted class metadata to avoid having to manually specify the service identifier. This is done by using the `@injectable` decorator from `inversify` on the class you want to bind. You need to enable the `emitDecoratorMetadata` TypeScript compiler option.

<CodeBlock language="ts">{fundamentalsBindingFromClassMetadataSource}</CodeBlock>

## Autobinding

InversifyJS provides a feature called autobinding that allows you to automatically bind classes. Whenever a class service is being resolved and no bindings are found in the planning phase, the container adds a type binding to the requested class before proceeding with the planning phase. This feature is disabled by default. To enable it, you need to pass the `autoBindInjectable` option to the container.

<CodeBlock language="ts">{fundamentalsAutobindingSource}</CodeBlock>

## Binding properties

A binding has the following properties:

### Service identifier

The identifier of the service for which a resolution is provided.

### Scope

The scope determines the caching strategy used to decide whether the service should be resolved or a cached value should be provided.

#### Request

When the service is resolved within the same `container.get` request, the same resolved value will be used.

<CodeBlock language="ts">{bindingScopeRequestSource}</CodeBlock>

#### Singleton

When the service is resolved, the same cached resolved value will be used.

<CodeBlock language="ts">{bindingScopeSingletonSource}</CodeBlock>

#### Transient

When the service is resolved, a new resolved value will be used each time.

<CodeBlock language="ts">{bindingScopeTransientSource}</CodeBlock>

### Constraint

Specifies whether the binding is used to provide a resolved value for the given service identifier. Refer to the [API docs](../api/binding-syntax.mdx#bindingwhensyntax) for more information.

### Lifecycle handlers

Handlers that are called after a resolved value is provided or a singleton-scoped binding is deactivated. Refer to the [API docs](../api/binding-syntax.mdx#bindingonsyntax) for more information.
